--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <script defer src="./js/core.js"></script>
 </head>
 <body>
-    <div id="notifications"></div>
     <div class="row">
         <div class="column">
             <div class="tab Agriculture">
@@ -45,4 +44,8 @@
             <div class="tab Catgirl"></div>
         </div>
     </div>
+    <div id="bottom-bar">
+      <div>Options</div><div>Discord</div><div>how</div>
+    </div>
+    <div id="notifications"></div>
 </body>
