--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script defer src="./js/core.js"></script>
 </head>
 <body>
+  <div id="content">
     <div class="row">
         <div class="column">
             <div class="tab Agriculture">
@@ -45,7 +46,18 @@
         </div>
     </div>
     <div id="bottom-bar">
-      <div>Options</div><div>Discord</div><div>how</div>
+      <div onClick="toggleOptions()">Options</div><div><a href="https://discord.gg/Y2s82h8">Discord</a></div><div><a href="https://www.latlmes.com/breaking/jackie-chan-found-dead-1">how</a></div>
     </div>
     <div id="notifications"></div>
+  </div>
+  <div id="options">
+    <button class="option">Save</button>
+    <button class="option">Import</button>
+    <button class="option">Export</button>
+    <button class="option">Reset</button>
+    <button class="option">Font:</button>
+    <button class="option">Autosave: <b id=autosave></b></button>
+    </br>
+
+  </div>
 </body>
