--- a/index.html
+++ b/index.html
@@ -45,19 +45,23 @@
             <div class="tab Catgirl"></div>
         </div>
     </div>
-    <div id="bottom-bar">
-      <div onClick="toggleOptions()">Options</div><div><a href="https://discord.gg/Y2s82h8">Discord</a></div><div><a href="https://www.latlmes.com/breaking/jackie-chan-found-dead-1">how</a></div>
-    </div>
-    <div id="notifications"></div>
+  </div>
+  <div id="bottom-bar">
+    <div onClick="toggleOptions()">Options</div><div><a href="https://discord.gg/Y2s82h8">Discord</a></div><div><a href="https://www.latlmes.com/breaking/jackie-chan-found-dead-1">how</a></div>
+  </div>
+  <div id="notifications"></div>
   </div>
   <div id="options">
-    <button class="option">Save</button>
-    <button class="option">Import</button>
-    <button class="option">Export</button>
-    <button class="option">Reset</button>
-    <button class="option">Font:</button>
-    <button class="option">Autosave: <b id=autosave></b></button>
+    <button class="option" onClick="save()">Save</button>
+    <button class="option" onClick="imp()">Import</button>
+    <button class="option" onClick="exp()">Export</button>
+    <button class="option" onClick="resetSave()">Reset</button>
+    <button class="option" onClick="autosave()">Autosave: <b id=autosave></b></button>
+    <button class="option">Save Interval:</br>
+      Current: <b id="current-interval"></b>s</br>
+      <input id="interval" type="number" min="15" max="1200">
+      <input type="button" onclick="setAutosaveInterval()" value="Set">
+    </button>
     </br>
 
-  </div>
 </body>
