Fixed minor bug

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <button class="option" onClick="autosave()">Autosave: <b id=autosave></b></button>
     <button class="option">Save Interval:</br>
       Current: <b id="current-interval"></b>s</br>
-      <input id="interval" type="number" min="15" max="1200">
+      <input id="interval" type="number" min="15" max="1200" value="15">
       <input type="button" onclick="setAutosaveInterval()" value="Set">
     </button>
     </br>
