Added GitHub link

--- a/index.html
+++ b/index.html
@@ -47,7 +47,10 @@
     </div>
   </div>
   <div id="bottom-bar">
-    <div onClick="toggleOptions()">Options</div><div><a href="https://discord.gg/Y2s82h8">Discord</a></div><div><a href="https://www.latlmes.com/breaking/jackie-chan-found-dead-1">how</a></div>
+    <div onClick="toggleOptions()">Options</div>
+    <div><a href="https://discord.gg/Y2s82h8">Discord</a></div>
+    <div><a href="https://www.latlmes.com/breaking/jackie-chan-found-dead-1">how</a></div>
+    <div><a href="https://github.com/lookeey/sim-idle/">GitHub</a></div>
   </div>
   <div id="notifications"></div>
   </div>
