Css rework and added upgrades section

--- a/index.html
+++ b/index.html
@@ -14,11 +14,15 @@
     <div class="row">
         <div class="column">
             <div class="tab Agriculture">
-                <div class=wheat>
+                <div class="wheat">
                     <p><i>You have <b class="wheat amount">a lot of</b> Wheat</i></p>
                 </div>
             </div>
-            <div class="tab Fisherman"></div>
+            <div class="tab Fisherman">
+              <div class="fish">
+                  <p><i>You have <b class="fish amount">a lot of</b> Fish</i></p>
+              </div>
+            </div>
             <div class="tab Catsitter"></div>
             <div class="tab Scientist"></div>
             <div class="tab Catgirl"></div>
@@ -36,9 +40,16 @@
                 <div id="btn-progress"></div>
             </div>
         </div>
-
         <div class="column">
-            <div class="tab Agriculture"></div>
+            <div class="tab Agriculture">
+              <h2 class="right-title">Upgrades</h2>
+              <div class="wheat upgrades">
+                <button class="wheat upgrade">
+                  <div class="upgrade-info">Add calm piano music for wheat well being (doesnt work)</div>
+                  <div class="upgrade-cost">$45.00</div>
+                </button>
+              </div>
+            </div>
             <div class="tab Fisherman"></div>
             <div class="tab Catsitter"></div>
             <div class="tab Scientist"></div>
