--- a/index.html
+++ b/index.html
@@ -95,11 +95,11 @@
     <div id="notifications"></div>
     </div>
     <div id="options">
-      <button class="option" onClick="save()">Save</button>
-      <button class="option" onClick="imp()">Import</button>
-      <button class="option" onClick="exp()">Export</button>
-      <button class="option" onClick="resetSave()">Reset</button>
-      <button class="option" onClick="autosave()">Autosave: <b id=autosave></b></button>
+      <button class="option" onclick="save()">Save</button>
+      <button class="option" onclick="imp()">Import</button>
+      <button class="option" onclick="exp()">Export</button>
+      <button class="option" onclick="resetSave()">Reset</button>
+      <button class="option" onclick="autosave()">Autosave: <b id=autosave></b></button>
       <button class="option">Save Interval:</br>
         Current: <b id="current-interval"></b>s</br>
         <input id="interval" type="number" min="15" max="1200" value="15">
